# atomspectra-waterfall-esp32

./: .gitignore  ASWF_FORMAT.en.md  ASWF_FORMAT.md  CMakeLists.txt  INSTALL.en.md  INSTALL.md  KNOWN_ISSUES.en.md  KNOWN_ISSUES.md  PROTOCOL.en.md  PROTOCOL.md  README.en.md  README.md  WATERFALL.en.md  WATERFALL.md  sdkconfig.defaults
demo/: demo-shim.js  index.html  meta.json  monitor.html  saved.html  service.html  system.html  waterfall.html
docs/: ASWF_V4_FORMAT.md  rec12_report.html  rec12_report.md  stab1_report.html  stab1_report.md  stab1_report.txt  stab1_stability.csv  stab2_report.html  stab2_report.md  stab2_stability.csv
main/: CMakeLists.txt  atomspectra.h  boot_config.c  boot_config.h  idf_component.yml  main.c  monitor.c  monitor.h  net_time.c  net_time.h  spectrogram.c  spectrogram.h  spectrum.c  tcp_bridge.c  usb_host_cdc.c  web_server.c  web_util.c  web_util.h  web_waterfall.c  web_waterfall.h  wf_offload.c  wf_offload.h  wifi_manager.c
scripts/: README.md  aswf_centroid_plot.py  aswf_drift.py  aswf_fix_stride.py  aswf_inspect.py  aswf_k40_bimodal.py  aswf_temp_drift.py  build_demo.py  build_demo_pages.ps1  fw10_dur_map.py  fw12_file_check.py  fw39_verify.py  fw8_boundary_check.py  fw8_rollover_trace.py  fw8_starve_probe.py  http_stab4_poll.py  n42_vs_aswf.py  test_rec13_integrity.py  test_rec14_rotation.py  v4_recon.py  v4_rowdump.py  v4_verify.py  waterfall_client.py  waterfall_n42.py  waterfall_stream.bat  waterfall_stream_app.py  waterfall_viewer.html  wf_offload_receiver.py  wf_pull_client.py  wf_recorder.bat  wf_recorder_app.py
(+27 files in other folders)
